@@ -116,7 +116,6 @@ private Q_SLOTS:
 private:
     void sendLastFmQuery(const QString &fixedQuery, int page);
     void sendGoogleQuery(const QString &fixedQuery, int page);
-    void sendDiscoGsQuery(const QString &fixedQuery, int page);
     void sendSpotifyQuery(const QString &fixedQuery);
     void sendITunesQuery(const QString &fixedQuery);
     void sendDeezerQuery(const QString &fixedQuery);
@@ -128,7 +127,6 @@ private:
     void sendQueryRequest(const QUrl &url, const QString &host=QString());
     void parseLastFmQueryResponse(const QByteArray &resp);
     void parseGoogleQueryResponse(const QByteArray &resp);
-    void parseDiscogsQueryResponse(const QByteArray &resp);
     void parseCoverArtArchiveQueryResponse(const QByteArray &resp);
     void parseSpotifyQueryResponse(const QByteArray &resp);
     void parseITunesQueryResponse(const QByteArray &resp);
